fixing primary tint colors for dark mode

--- a/src/theme/_dark.scss
+++ b/src/theme/_dark.scss
@@ -14,8 +14,8 @@
   --ion-text-color: #ffffff;
   --ion-text-color-rgb: 255, 255, 255;
 
-  --ion-color-primary-shade: #951ecb;
-  --ion-color-primary-tint: #af33e8;
+  --ion-color-primary-shade: #4027a9;
+  --ion-color-primary-tint: #5c40d2;
 
   --ion-color-step-50: #0d0d0d;
   --ion-color-step-100: #1a1a1a;
